--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/shop-haven-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Simplify your shopping with Haven's online store- your one-stop shop for luxurious bedding and stylish platform beds to create your dream sleep sanctuary."
+    />
     <title>Shop Haven</title>
   </head>
   <body>
